// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en GifGrid Component Deve de mostrar items cuando se cargan imágenes 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    One Punch
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="abc"
      key="abc"
      title="Cualquier cosa"
      url="https://localhost/cualquier/cosa.jpg"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en GifGrid Component Deve mostrar el compoente corretamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    One Punch
  </h3>
  <div
    className="card-grid"
  />
</Fragment>
`;
